_sass/_custom.scss
// Portraits
.portrait {
  position: relative;
  width: 250px;
  height: 250px;
  overflow: hidden;
  border-radius: 50%;
  margin: auto; // Center horizontally
}

.portrait img {
  width: 100%;
  height: auto;
}

.sidebar-portrait {
  @extend .portrait;
}

.sidebar-portrait img {
  @extend .portrait;
}

// Cards
.card {

  img {
    max-width: 150px;
    margin: auto;
  }

  table {
    border: 2px solid #e5e5e5;
  }

  td, th {
    border: 0px solid #e5e5e5;
    background-color: #f9f9f9;
  }

}

.article-card {
  @extend .card;
}

// Legal links
.legal {
  font-size: 75%;
  color: #999;
}

// Video
.video-gif {
  position : relative;
  display : block;
  width : 100%;
  min-width : 200px;
  margin : auto;
  height : auto;
}

